--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,9 @@ jinja2-time==0.2.0
 jmespath==0.9.3
 json2parquet==0.0.24
 jsonschema==2.6.0
+jupyter==1.0.0
 jupyter-client==5.2.3
+jupyter-console==6.0.0
 jupyter-core==4.4.0
 llvmlite==0.25.0
 locket==0.2.0
@@ -60,7 +62,7 @@ nb-conda-kernels==2.1.1
 nbconvert==5.3.1
 nbformat==4.4.0
 nose==1.3.7
-notebook==5.7.0
+notebook==5.7.2
 numba==0.40.0
 numpy==1.15.3
 olefile==0.46
@@ -96,6 +98,7 @@ python-dateutil==2.7.3
 pytz==2018.6
 PyYAML==3.13
 pyzmq==17.1.2
+qtconsole==4.4.3
 requests==2.20.0
 retrying==1.3.3
 rsa==3.4.2
